--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
+    "react-text-mask": "^5.4.3",
     "recharts": "^1.8.5",
     "yup": "^0.29.3"
   },
