--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Server with express, nodeje and mysql",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [
-    "nodejs",
-    "express",
-    "mysql",
-    "api"
-  ],
-  "author": "Robin Oost",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "epxress": "0.0.1-security",
     "express": "^4.17.1",
-    "mysql": "^2.18.1",
+    "mysql": "^2.18.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
